Alteração no link do interno da Logo x-men que direciona o usuario pra meu meu github

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <header class="cabecalho">
-        <a href="https://github.com/Kevin-dev-code"><img class="logo" src="src/imagens/logo.svg" alt="Logo X-MEN"></a>
+        <a href="https://github.com/Kevim-dev-student"><img class="logo" src="src/imagens/logo.svg" alt="Logo X-MEN"></a>
     </header>
     <main class="selecao-personagens">
         <section class="personagens">
